Transfer of control to online and offline fn

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,9 +11,10 @@
         android:id="@+id/view1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="112dp"
+        android:layout_marginStart="119dp"
+        android:layout_marginTop="117dp"
         android:text="@string/_0"
         android:textColor="@android:color/holo_orange_dark"
         android:textSize="30sp"
@@ -23,9 +24,10 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="173dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="131dp"
+        android:layout_marginTop="212dp"
         android:text="@string/_0"
         android:textColor="@android:color/holo_red_light"
         android:textSize="36sp"
