--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,9 +11,8 @@
         android:id="@+id/view1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="119dp"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="117dp"
         android:text="@string/_0"
         android:textColor="@android:color/holo_orange_dark"
@@ -24,22 +23,22 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginEnd="131dp"
-        android:layout_marginTop="212dp"
+        android:layout_centerInParent="true"
         android:text="@string/_0"
         android:textColor="@android:color/holo_red_light"
         android:textSize="36sp"
         android:textStyle="bold"
         android:visibility="visible" />
 
-    <Button
-        android:id="@+id/view"
+    <TextView
+        android:id="@+id/view4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:text="Button" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="110dp"
+        android:text="0"
+        android:textColor="@android:color/holo_purple"
+        android:textSize="36sp" />
 
 </RelativeLayout>
